# datcat

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-build.sh  helpers.py  pyproject.toml
.github/workflows/: build-and-deploy-to-gke.yml  ci-to-docker-hub.yml  deploy-to-cloud-run.yml  deploy-to-gke.yml  run-pytest-on-pull-request.yml
adapters/: repository.py
catalogue/mappings/: schema_topic_subscription.json
datcat/: helpers.py  settings.py
datcat/adapters/: repository.py
datcat/domain/: model.py
datcat/entrypoints/: app.py  flask_app.py  mappings.py
domain/: model.py
entrypoints/: flask_app.py
example_catalogue/mappings/: schema_topic_subscription.json
example_catalogue/schemas/: registration_v1.json  sale_complete_v1.json
tests/: conftest.py  pytest.ini  test_entrypoint.py  test_repository.py
tests/catalogue/schemas/: schema_one_v2.json
tests/schemas/: schema_one_v1.json  schema_two_v1.json
