[tool.poetry]
name = "datcat"
version = "0.1.0"
description = "Simple Data Catalogue API"
authors = ["Antonio <antonio.one@pm.me>"]
license = "TBC"
packages = [
    { include = "adapters" },
    { include = "domain" },
    { include = "entrypoints" },
]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-API = "^2.0"
python-decouple = "^3.4"
pytest-env = "^0.6.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.0"
pytest = "^6.2.2"

[tool.poetry.scripts]
datcat = "entrypoints.flask_app:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
