[tool.poetry]
name = "datcat"
version = "0.1.3"
description = "Simple Data Catalogue API"
authors = ["Antonio <antonio.one@pm.me>"]
license = "TBC"
readme = "README.md"
homepage = "https://github.com/antonio-one/datcat"
repository = "https://github.com/antonio-one/datcat"
keywords = ["python", "fastapi", "data", "catalogue", "api"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-API = "^2.0"
python-decouple = "^3.4"
fastapi = "^0.63.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.11.1"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-env = "^0.6.2"
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.7.0"
uvicorn = "^0.13.4"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
datcat = "datcat.entrypoints.flask_app:main"
create_mappings = "datcat.helpers:create_mappings"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
